@@ -66,28 +66,30 @@
                (require 'sgml-mode)
                (set-syntax-table sgml-mode-syntax-table))))
 
-(global-set-key (kbd "<M-up>")
-                (lambda (p)
-                  (interactive "*p")
-                  (let ((c (current-column)))
-                    (beginning-of-line)
-                    (kill-line 1)
-                    (previous-line p)
-                    (beginning-of-line)
-                    (yank)
-                    (previous-line 1)
-                    (move-to-column c))))
-(global-set-key (kbd "<M-down>")
-                '(lambda (p)
-                   (interactive "*p")
-                   (let ((c (current-column)))
-                     (beginning-of-line)
-                     (kill-line 1)
-                     (next-line p)
-                     (beginning-of-line)
-                     (yank)
-                     (previous-line 1)
-                     (move-to-column c))))
+(defun move-line-up (p)
+  "Move current line up"
+  (interactive "*p")
+  (let ((c (current-column)))
+    (beginning-of-line)
+    (kill-line 1)
+    (previous-line p)
+    (beginning-of-line)
+    (yank)
+    (previous-line 1)
+    (move-to-column c)))
+(defun move-line-down (p)
+  "Move current line down"
+  (interactive "*p")
+  (let ((c (current-column)))
+    (beginning-of-line)
+    (kill-line 1)
+    (next-line p)
+    (beginning-of-line)
+    (yank)
+    (previous-line 1)
+    (move-to-column c)))
+(global-set-key (kbd "<M-up>") 'move-line-up)
+(global-set-key (kbd "<M-down>") 'move-line-down)
 (global-set-key [(control tab)]
                 (lambda () (interactive) (switch-to-buffer (other-buffer))))
 (global-set-key (kbd "C-M-;") 'comment-or-uncomment-region)
