@@ -1,3 +1,8 @@
+2009-12-06  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (move-line-up): Add (move-line-up).
+	(move-line-down): Add (move-line-down).
+
 2009-12-05  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (gud-kill): Add (gud-kill).
